--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section class="hero_container container">
         <h1 class="hero_tittle">Hola! Mi nombre es <span id="h1">Mariana Beaufils</span> </h1>
         <p class="hero_paragraph">
-          Fullstack Developer, estudiante y apasionada de la tecnologia.
+          Fullstack Developer, estudiante y apasionada de la tecnología.
         </p>
         <button><a href="img/Mariana Beaufilscv (1).pdf" class="cta" download=""> <span>Descargar CV</span> </a></button>
 
@@ -55,10 +55,10 @@
           <div class="knowledge_texts">
             <h2 class="subtittle">Sobre mi </h2>
             <p class="knowledge_paragraph">
-              Hola! Soy Mariana Beaufils y es un gusto que estes aca. <br>
-              Soy programadora Fullstack y estudio ingenieria en informatica en la universidad de Buenos Aires. <br>
-              Tengo conocimientos en HTML, CSS, JAVASCRIPT,MONGODB, NODE JS, REACT Y PYTHON, y estoy dispuesta a aprender nuevas tecnologias. Sé utilizar la herramienta
-              de Git y tengo conocimiento sobre la metodología ágil Scrum.
+              Hola! Soy Mariana Beaufils y es un gusto que estes acá. <br>
+              Soy programadora Fullstack y estudio ingeniería en informática en la universidad de Buenos Aires. <br>
+              Tengo conocimientos en HTML, CSS, JAVASCRIPT,MONGODB, NODE JS, REACT Y PYTHON, y estoy dispuesta a aprender nuevas tecnologias. Se utilizar la herramienta
+              de Git y tengo conocimientos sobre la metodología ágil Scrum.
               Me encanta nutrirme de conocimientos nuevos todos los días y por eso busco herramientas para una constante
               capacitación.<br>
               Mi objetivo es encontrar mi primer empleo IT en donde pueda desarrollar todos mis
